# Beam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
applications/cart/: admin.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
applications/cart/migrations/: 0001_initial.py  0002_initial.py
applications/global_settings/: apps.py  models.py
applications/global_settings/migrations/: 0001_initial.py
applications/network/: admin.py  apps.py  decorators.py  filters.py  models.py  queries.py  serializers.py  services.py  urls.py  views.py
applications/network/migrations/: 0001_initial.py  0002_initial.py
applications/payment/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
applications/payment/migrations/: 0001_initial.py  0002_initial.py
applications/product/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
applications/product/migrations/: 0001_initial.py
applications/review/: apps.py
applications/user/: admin.py  apps.py  models.py  urls.py
applications/user/migrations/: 0001_initial.py
beam/: abstract_models.py  asgi.py  celery.py  database_routers.py  messages.py  middlewares.py  pagination.py  urls.py  wsgi.py
beam/settings/: base.py  cors.py  dev.py  local.py
docker/dev/: docker-compose.dev.yaml
docker/prod/: docker-compose.prod.yaml
entrypoints/: run_docker.sh  wsgi_server.sh
nginx/dev/: beam_post_dev_nginx.conf  boomerang_post_dev_nginx.conf
